--- a/index.html
+++ b/index.html
@@ -13,12 +13,26 @@
 
 <body>
 
-  <h3>art</h3>
-  <h1>RIDEOUT</h1>
+  <h3>Art</h3>
+  <h1>Rideout</h1>
 
-  <h3>sculpture</h3>
-  <h3>code</h3>
-  <h3>literature</h3>
+  <!--
+    the plan is to use javascript to produce a maze that user can navigate 
+    through.
+  
+    We just keep inserting divs and overwriting the old
+
+    we don't save graphics, only the attributes needed to redraw them.
+  
+  
+  -->
+  <div id="ribbonMaze">
+
+  </div>
+
+  <h3>Sculpture</h3>
+  <h3>Code</h3>
+  <h3>Literature</h3>
 
 </body>
 
