--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <style>
-       
-  </style>
-  
+  <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="css/ribbon.css" />
 
   <title>Portfolio Rideout</title>
