--- a/index.html
+++ b/index.html
@@ -1,39 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Required meta tags always come first -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
+  <!-- Additional CSS must be placed after Bootstrap CSS -->
+  <!--
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+  -->
   
   <link rel="stylesheet" href="css/styles.css" />
-  <link rel="stylesheet" href="css/ribbon.css" />
 
   <title>Portfolio Rideout</title>
 </head>
 
-<body>
-
-  <h3>Art</h3>
-  <h1>Rideout</h1>
+<body onload="onLoad()">
+  <h3>.art</h3>
+  <h3>.design</h3>
+  <h3>.blog</h3>
+  <h1>RideouT</h1>
 
   <!--
-    the plan is to use javascript to produce a maze that user can navigate 
-    through.
-  
-    We just keep inserting divs and overwriting the old
-
-    we don't save graphics, only the attributes needed to redraw them.
+    You need to find the number of cells across
+    by getting the device width and module
   -->
   
-  <div id="ribbonMaze">
+  
+  
+  
+  <div id="ribbonMaze" class="flex-container">
+    <div id="cell" class="flex-child cell cell-rm-b">
 
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+      <img src="img/stickfig.png" id="stickfig" />
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
+
+    <div id="cell" class="flex-child cell cell-rm-b">
+
+    </div>
   </div>
 
-  <h3>Sculpture</h3>
-  <h3>Code</h3>
-  <h3>Literature</h3>
 
+
+  <div class="flex-container">
+
+    <div class="flex-child">
+      
+    </div>
+    
+    <div class="flex-child">
+
+    </div>
+
+    <div class="flex-child">
+
+    </div>
+
+    <div class="flex-child">
+
+    </div>
+
+    <div class="flex-child">
+
+    </div>
+
+    <div class="flex-child">
+
+    </div>
+
+    <div class="flex-child"></div>
+
+<!--
+  <br>
+  <br>
+  <span class="range-caption">Reverse</span>
+  <input type="range" id="speed" name="speed" min="-10" max="10" value="1">
+  <span class="range-caption">Forward</span>
+  <br>
+  <br>
+  <div id='container'></div>
+-->  
+  
+  
+  <script src="js/portfolio.js"></script>
 </body>
 
 </html>
