--- a/index.html
+++ b/index.html
@@ -26,68 +26,26 @@
   <h3>.blog</h3>
   <h1>RideouT</h1>
 
+
+
+
+
   <!--
     You need to find the number of cells across
     by getting the device width and module
   -->
   
   
+
   
-  
-  <div id="ribbonMaze" class="flex-container">
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-      <img src="img/stickfig.png" id="stickfig" />
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
-    </div>
-
-    <div id="cell" class="flex-child cell cell-rm-b">
-
+  <div id="ribbonMaze">
+    <div class="cell">
+      <img src="img/stickfig.png" id="stickfig">
     </div>
   </div>
 
+
+  <!--
 
 
   <div class="flex-container">
