--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
   <!-- Additional CSS must be placed after Bootstrap CSS -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+
+  
   <!--
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
   -->
   
   <link rel="stylesheet" href="css/styles.css" />
@@ -21,28 +23,171 @@
 </head>
 
 <body onload="onLoad()">
-  <h3>.art</h3>
-  <h3>.design</h3>
-  <h3>.blog</h3>
-  <h1>RideouT</h1>
+  <div class="topbox-container">
+    <div class="grid-child testBorder">
+      <h3>.art</h3>
+      <h3>.design</h3>
+      <h3>.blog</h3>
+      <br>
+      <h1>RIDEOUT</h1>
+    </div>
+    <div style="border: 10px solid orange;">
 
-
-
-
-
-  <!--
-    You need to find the number of cells across
-    by getting the device width and module
-  -->
-  
-  
-
-  
-  <div id="ribbonMaze">
-    <div class="cell">
-      <img src="img/stickfig.png" id="stickfig">
     </div>
   </div>
+  
+  <div id="ribbonMaze"">
+    <div class="grid-container" style="grid-gap: 0px">
+      <div class="grid-child cell">
+        <a href="https://github.com/kjrideout">
+          <img src="img/stickfig.png" id="stickfig">
+        </a>
+      </div>
+      
+      <!--js will append cells divs from here
+
+
+
+
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      <div class="grid-child cell"></div>
+      -->
+    </div>
+  </div>
+
+
+
+  
+
+ <!--
+  <div id="ribbonMazeOld">
+    <div id="startQuad" class="grid-container">
+      <div class="grid-child cell cell-rm-r cell-rm-b">
+        <a href="https://github.com/kjrideout">
+          <img src="img/stickfig.png" id="stickfig">
+        </a>
+      </div>
+      <div class="grid-child cell cell-rm-l cell-rm-r"></div> 
+      <div class="grid-child cell cell-rm-t cell-rm-b cell-rm-r"></div> 
+      <div class="grid-child cell cell-rm-b cell-rm-t cell-rm-r cell-rm-l"></div> 
+    <div>
+      
+    <div>
+      <!--javascript will insert cells to fill the top two rows here-->
+    </div>
+
+    <div>
+      <!--javascript will insert the remaining divs-->
+    </div>
+  </div>
+-->
+
+  <div class="testBorder">
+
+  </div>
+
+
+  
+
 
 
   <!--
